# cleansh-workspace

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cleansh.yaml  test_stream.py
.github/workflows/: codeql.yml
cleansh/: ARCHIVE-CHANGELOG.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  README.md  SECURITY.md  TRADEMARK.md
cleansh-core/: CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  LICENSE.md  README.md
cleansh-core/config/: default_rules.yaml
cleansh-core/src/: config.rs  engine.rs  errors.rs  headless.rs  lib.rs  profiles.rs  redaction_match.rs  validators.rs
cleansh-core/src/engines/: entropy_engine.rs  mod.rs  regex_engine.rs
cleansh-core/src/remediation/: fingerprint.rs  limiter.rs  mod.rs  orchestrator.rs  vault.rs
cleansh-core/src/remediation/providers/: github.rs
cleansh-core/src/remediation/vault/: s3.rs
cleansh-core/src/sanitizers/: compiler.rs  mod.rs
cleansh-core/tests/: config_integration_tests.rs  entropy_config_test.rs  profile_tests.rs
cleansh-entropy/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
cleansh-entropy/src/: lib.rs
cleansh-entropy/src/context/: mod.rs
cleansh-entropy/src/engine/: mod.rs
cleansh-entropy/src/entropy/: mod.rs
cleansh-entropy/src/scanner/: mod.rs
cleansh-entropy/src/scoring/: mod.rs
cleansh-entropy/src/statistics/: mod.rs
cleansh/src/: cli.rs  lib.rs  main.rs
cleansh/src/commands/: cleansh.rs  mod.rs  uninstall.rs
cleansh/src/tui/: app.rs  mod.rs  sync.rs  ui.rs
cleansh/src/ui/: diff_viewer.rs  mod.rs  theme.rs
cleansh/src/utils/: app_state.rs  mod.rs
cleansh/tests/: cleansh_integration_tests.rs  cli_integration_tests.rs  integration_line_buffered.rs  platform_test.rs  sanitize_shell_integration_tests.rs  stats_tests.rs  uninstall_command_tests.rs
cleansh/wix/: main.wxs
