# File: Cargo.toml

[package]
name = "cleansh-core"
version = "0.1.2"
edition = "2021"
authors = ["Obscura Tech"]
license-file = "LICENSE.md"
description = "Core library for CleanSH, providing essential data sanitization rules, compilation, and application logic independent of the CLI."
repository = "https://github.com/KarmaYama/cleansh-workspace"
homepage = "https://github.com/KarmaYama/cleansh-workspace"
keywords = ["sanitization", "redaction", "data-security", "privacy", "core-logic"]
categories = ["data-structures", "parsing", "text-processing"]

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
serde_yml = "0.0.12"
regex = "1.11"
lazy_static = "1.4"
strip-ansi-escapes = "0.2.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
tinytemplate = "1.2"
dirs = "6.0" 
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1.18", features = ["serde", "v4"] } 
bincode = { version = "2.0", features = ["serde"] }

[dev-dependencies]
test-log = "0.2.14" 
tempfile = "3.21"