[package]
name = "cleansh"
version = "0.1.8"
edition = "2024"
build = "build.rs"
publish = true
license-file = "LICENSE.md"
repository = "https://github.com/KarmaYama/cleansh-workspace"
homepage = "https://github.com/KarmaYama/cleansh-workspace"
authors = ["Obscura Tech"]
readme = "README.md"
rust-version = "1.88.0"
categories = ["command-line-utilities"]
keywords = ["cli", "security", "redact", "sanitize", "clipboard"]
description = "Sanitize your terminal output. One tool. One purpose."

[package.metadata.wix]
upgrade-guid = "F47C98E6-B908-4CB3-A38B-0EFD5F3DE62D"
path-guid = "DB8DAC94-9423-4D0E-A466-24166013B8BB"
license = true
eula = false

[package.metadata.cleansh]
license_notes = "Deleting this build.rs script or modifying this Cargo.toml file does not invalidate the license terms. By interacting with this codebase, you agree to the conditions of the Polyform Noncommercial License 1.0.0. For commercial use, a separate license is required."

[dependencies]
cleansh-core = { path = "../cleansh-core", version = "0.1.2"}
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ok", version = "0.9.36" }
serde_json = "1.0"
arboard = { version = "3.4.0", optional = true }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0.15"
owo-colors = "4.2.2"
comfy-table = "7.0"
diffy = "0.4.2"
dissimilar = "1.0.8"
dirs = "6.0.0"
once_cell = "1.19"
chrono = "0.4.41"
is-terminal = "0.4"
strip-ansi-escapes = "0.2.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
ring = "0.17"
hex = "0.4"
argon2 = "0.5.3"
sha256 = "1.x"
rpassword = "7.4.0"
base64 = "0.22"
ed25519-dalek = { version = "2.0", features = ["std"] }
aes-gcm = "0.10"
aead = "0.5"
rand = "0.9"
rand_core = "0.9"
keyring = "3.6"
fs2 = "0.4"
sha2 = "0.10"
serde_with = "3.14.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
test-log = "0.2.18"
gag = "1.0"
mockito = "1.3"
rand = "0.9"
sha2 = "0.10"
uuid = { version = "1.18.0", features = ["v4"] }

[build-dependencies]
toml = "0.9.5"

[target.'cfg(windows)'.dependencies]
# Corrected winapi features to include securitybaseapi, winnt, and processthreadsapi
winapi = { version = "0.3", features = ["shellapi", "minwindef", "securitybaseapi", "winnt", "processthreadsapi"] }

[features]
default = ["clipboard"]
test-exposed = []
clipboard = ["arboard"]

[lib]
name = "cleansh"
path = "src/lib.rs"

[[bin]]
name = "cleansh"
path = "src/main.rs"